add user testcode

--- a/users/templates/index.html
+++ b/users/templates/index.html
@@ -114,8 +114,9 @@
                 <a href="https://ssu-uky.store/api/users/logout/"> 로그아웃 </a>
             </div>
             <div class="col-api"> BOARDS <br><br>
+                <a href="https://ssu-uky.store/api/boards/write/"> 게시글 작성 </a>
                 <a href="https://ssu-uky.store/api/boards/list"> 게시글 목록 </a>
-                <a href="https://ssu-uky.store/api/boards/detail/1/"> 게시글 상세 <p>list에서 id 번호 확인 후 이동해주세요.</p></a>
+                <a href="https://ssu-uky.store/api/boards/detail/1/"> 게시글 상세 <p>게시글 목록(list)에서 id 번호 확인 후 이동해주세요.</p></a>
                 </ul>
             </div>
         </div>
